--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4874,10 +4874,11 @@ select option:not(:first-child) {
 .permission-container thead tr th,
 .permission-container tbody tr td {
     padding: 12px 24px;
+    border: 1px solid var(--Neutral-Separator);
 }
 
-.permission-container tbody tr td:first-child label,
-.permission-container thead tr th:first-child label {
+.permission-container tbody tr td:first-child .form-check,
+.permission-container thead tr th:first-child .form-check {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -4890,13 +4891,10 @@ select option:not(:first-child) {
     font-size: 14px;
     font-weight: 700;
     color: var(--text-dark2);
-    /* border: 0; */
-    border-top: 1px solid var(--Neutral-Separator, #EBEBEB);
-    border-bottom: 1px solid var(--Neutral-Separator, #EBEBEB);
     background: var(--Button-soft-color, #CCDDEB);
 }
 
-.permission-container tbody tr td label {
+.permission-container tbody tr td .form-check {
     font-size: 14px;
     font-weight: 600;
     color: var(--text-dark2);
@@ -4905,9 +4903,24 @@ select option:not(:first-child) {
     gap: 8px;
 }
 
-.permission-container label input {
-    height: 16px;
-    width: 16px;
+.permission-container tbody tr td .form-check label {
+    margin: 0;
+    padding: 0;
+    margin-top: 3px;
+}
+
+.form-check input[type="checkbox"] {
+    background-color: transparent;
+    height: 18px;
+    width: 18px;
+    box-shadow: none;
+    border-color: var(--text-5C);
+}
+
+.form-check input[type="checkbox"]:checked {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    box-shadow: none;
 }
 
 .permission-container label input:checked {
