--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5298,9 +5298,10 @@ select option:not(:first-child) {
 
 
 /* +++++++++++++++ COMPANY SETTING CSS STARTS +++++++++++++++++++ */
-.company_setting_heading{
+.company_setting_heading {
     padding: 24px 0;
 }
+
 .company_setting_heading h3 {
     color: var(--text-dark2, #141414);
     font-size: 24px;
@@ -5347,7 +5348,7 @@ select option:not(:first-child) {
     object-fit: contain;
 }
 
-#printSection .print-header {
+.print-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -5357,21 +5358,21 @@ select option:not(:first-child) {
     padding-bottom: 9px;
 }
 
-#printSection .print-header h3 {
+.print-header h3 {
     font-size: 14px;
     font-weight: 800;
     color: #000;
     font-family: var(--lato);
 }
 
-#printSection .print-header .last_div {
+.print-header .last_div {
     display: flex;
     flex-direction: column;
     gap: 9px;
     text-align: end;
 }
 
-#printSection .print-header p {
+.print-header p {
     color: #000;
     font-size: 10px;
     font-family: var(--lato);
@@ -5477,8 +5478,14 @@ select option:not(:first-child) {
 
 }
 
+.inventory_table .common_print_header,
+.inventory_table .payment_print_footer {
+    display: none;
+}
+
 /* vocuhar print css   ends*/
 @media print {
+
 
     /* Hide everything on the page */
     body * {
@@ -5487,12 +5494,15 @@ select option:not(:first-child) {
 
     /* Only show the printable table */
     #printableTable,
+    .inventory_table,
     #printSection,
     #printSection *,
+    .inventory_table *,
     #printableTable * {
         visibility: visible;
     }
 
+    .inventory_table,
     #printSection,
     #printableTable {
         position: absolute;
@@ -5501,7 +5511,13 @@ select option:not(:first-child) {
         width: 100%;
     }
 
-    #printSection {
+    .inventory_table .common_print_header,
+    .inventory_table .payment_print_footer {
+        display: block;
+    }
+
+    #printSection,
+    .inventory_table {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -5510,27 +5526,39 @@ select option:not(:first-child) {
 
     .payment_print_footer {
         margin-top: auto;
-    }
-
-    .payment_print_footer {
-        page-break-inside: avoid;
         /* prevent footer from splitting across pages */
+        page-break-inside: avoid;
     }
 
+    .inventory_table {
+        margin: 0 !important;
+        width: 100% !important;
+        padding: 0 !important;
+    }
+
+
+    .common_table table,
     #printableTable table,
     #printSection table {
-        width: 100%;
+        width: 100% !important;
         border-collapse: collapse;
         font-size: 12px;
     }
 
-    #printableTable th,
+    /* reduced the font-size  */
+    .inventory_table table tbody th ,
+    .inventory_table table td {
+        font-size: 11px !important;
+    }
+
+    .common_table th,
     #printSection th,
+    .common_table td,
     #printSection td,
     #printableTable td {
         border: 1px solid #2b2b2b;
         padding: 6px;
-        color: black !important;
+        color: rgb(36, 36, 36) !important;
     }
 
     .payment_print_footer .signature_box h4,
@@ -5541,10 +5569,12 @@ select option:not(:first-child) {
         print-color-adjust: exact;
     }
 
-    #printableTable th {
+    #printableTable th,
+    .common_table th {
         background-color: #f0f0f0;
     }
 
+    .inventory_table .pagination_class,
     #printableTable .print_pagination {
         display: none !important;
     }
@@ -5578,6 +5608,15 @@ select option:not(:first-child) {
     .printing_vouchar_container .table thead th:nth-child(2),
     .printing_vouchar_container .table thead th:nth-child(3) {
         width: 150px;
+    }
+
+    .inventory_table .common_print_header {
+        margin-bottom: 32px;
+    }
+
+    .wrap_Text {
+        white-space: normal !important;
+        word-wrap: break-word;
     }
 
 }
